# doc-generation

./: .dockerignore  .gitignore  DEPLOYMENT_README.md  Dev_log.md  Dockerfile  PORT_CONFIG_GUIDE.md  QUICK_START_GUIDE.md  README.md  SCRIPTS_README.md  ai-doc-requirements.txt  analyze_recent_tasks.py  api_tests.http  docker-compose.yml  load_balancer.py  log_rotate_app.sh  logrotate.conf  manage.sh  quick_start.sh  redis_stream_monitor.py  setup_log_rotation.sh  start_dev_server.sh  stop_dev_server.sh  stop_dev_server_sudo.sh  test_complete_flow.py  test_concurrency.py  test_document_generation.sh  test_log_rotation.sh  test_model_validator.py  test_reranker_fix.py  test_source_metadata.py  update_script_paths.sh
service/: .env.example  API_TEST_GUIDE.md  CONTEXT_FILES_INTEGRATION_SUMMARY.md  MANIFEST.in  OUTLINE_LOADER_IMPLEMENTATION_SUMMARY.md  README.md  SERVER_CONFIG_README.md  TEST_NEW_FEATURES_GUIDE.md  curl_commands_new_features.txt  curl_test_outline.sh  debug_es_search.py  env_example.txt  find_document_index.py  monitor_logs.py  monitor_tasks_simple.py  pyproject.toml  quick_test_example.sh  requirements.txt  run_tests.py  run_user_document_search_test.sh  simple_log_test.py  start_server.py  start_unified_logging.sh  test_get_real_file_token.py  test_outline.json  test_outline.md  test_outline_api_curl.sh  test_outline_loader.py  test_redis_cluster_config.py  test_researcher_final.py  test_researcher_user_docs.py  test_search_within_documents.py  test_search_within_documents_real.py  test_server_config.py
service/api/: endpoints.py  main.py
service/docs/: API_Usage_Guide.md  BIBLIOGRAPHY_NODE_SUMMARY.md  CELERY_USAGE.md  CHAPTER_PROCESSING_FIX_SUMMARY.md  CHAPTER_WORKFLOW_NODES_CLEANUP_SUMMARY.md  CITATION_PROCESSING_FIX_SUMMARY.md  CONTAINER_GENRE_STRATEGIES_SUMMARY.md  CONTAINER_PROMPT_SELECTOR_SUMMARY.md  CONTENT_PROCESSOR_PROMPT_REFACTOR_SUMMARY.md  ES_TEST_CLEANUP.md  FE_BE_Protocal.md  FINAL_ARCHITECTURE_UPDATE_SUMMARY.md  GENRE_AWARE_API_SUMMARY.md  GENRE_AWARE_PROMPT_SELECTOR_SUMMARY.md  GRAPH_NODES_CLEANUP_SUMMARY.md  GRAPH_REFACTORING_SUMMARY.md  INITIAL_RESEARCH_NODE_REFACTOR_SUMMARY.md  OUTLINE_DOCUMENT_GENERATOR_REFACTOR_SUMMARY.md  OUTLINE_JSON_API_GUIDE.md  (+24 more)
(+175 files in other folders)
